@@ -1,5 +1,4 @@
 /* Automatically generated from config.h: public/compiler config. */
-#define PQXX_HAVE_AUTO_PTR 1
 #define PQXX_HAVE_CPP_PRAGMA_MESSAGE 1
 #define PQXX_HAVE_GCC_CONST 1
 #define PQXX_HAVE_GCC_DEPRECATED 1
